src/objects/Freelancer__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExperienceLevel__c</fullName>
        <label>ExperienceLevel</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expert</fullName>
                </value>
                <value>
                    <fullName>Intermediate</fullName>
                </value>
                <value>
                    <fullName>Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfJobsWorkedOn__c</fullName>
        <label>NumberOfJobsWorkedOn</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberSuccessCompletedJobs__c</fullName>
        <label>NumberSuccessCompletedJobs</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Adobe Acrobat</fullName>
                </value>
                <value>
                    <fullName>Adobe After Effects</fullName>
                </value>
                <value>
                    <fullName>Adobe Illustrator</fullName>
                </value>
                <value>
                    <fullName>Adobe InDesign</fullName>
                </value>
                <value>
                    <fullName>Adobe Photoshop</fullName>
                </value>
                <value>
                    <fullName>Adobe XD</fullName>
                </value>
                <value>
                    <fullName>Advertising Design</fullName>
                </value>
                <value>
                    <fullName>Affinity Designer</fullName>
                </value>
                <value>
                    <fullName>Art Deco</fullName>
                </value>
                <value>
                    <fullName>Arts &amp; Crafts</fullName>
                </value>
                <value>
                    <fullName>Banner Ad Design</fullName>
                </value>
                <value>
                    <fullName>Black &amp; White</fullName>
                </value>
                <value>
                    <fullName>Book</fullName>
                </value>
                <value>
                    <fullName>Brand Identity &amp; Guidelines</fullName>
                </value>
                <value>
                    <fullName>Brand Identity Design</fullName>
                </value>
                <value>
                    <fullName>Brochure</fullName>
                </value>
                <value>
                    <fullName>Business Card</fullName>
                </value>
                <value>
                    <fullName>Canva</fullName>
                </value>
                <value>
                    <fullName>Cartoon Style</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Clothing</fullName>
                </value>
                <value>
                    <fullName>Clothing &amp; Merchandise Design</fullName>
                </value>
                <value>
                    <fullName>Colorful</fullName>
                </value>
                <value>
                    <fullName>Comparison Infographic</fullName>
                </value>
                <value>
                    <fullName>Contemporary</fullName>
                </value>
                <value>
                    <fullName>Content Writing</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Cover Art Design</fullName>
                </value>
                <value>
                    <fullName>Data Visualization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Freelancer</label>
    <nameField>
        <label>Freelancer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freelancers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>